Added postgres as a dependency and three stages for experiment users